unpackaged/objects/Sync__c.object
<CustomObject>
    <fields>
        <fullName>Finish_Timestamp__c</fullName>
        <label>Finish Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Records_Checked__c</fullName>
        <label>Records Checked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Records_Inserted__c</fullName>
        <label>Records Inserted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Records_Updated__c</fullName>
        <label>Records Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Script_Name__c</fullName>
        <label>Script Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beckman</fullName>
                </value>
                <value>
                    <fullName>IDBS</fullName>
                </value>
                <value>
                    <fullName>Leica</fullName>
                </value>
                <value>
                    <fullName>Moldev</fullName>
                </value>
                <value>
                    <fullName>SCIEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Timestamp__c</fullName>
        <label>Start Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Sync Jobs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Script_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Object__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Timestamp__c</columns>
        <columns>Finish_Timestamp__c</columns>
        <columns>Records_Inserted__c</columns>
        <columns>Records_Updated__c</columns>
        <columns>Records_Checked__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>today</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Latest_SyncOpCo_Opportunity_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Script_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Object__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Timestamp__c</columns>
        <columns>Finish_Timestamp__c</columns>
        <columns>Records_Inserted__c</columns>
        <columns>Records_Updated__c</columns>
        <columns>Records_Checked__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>Script_Name__c</field>
            <operation>notContain</operation>
            <value>Bi-Directional</value>
        </filters>
        <label>Sync Jobs - Opportunity</label>
    </listViews>
    <listViews>
        <fullName>Latest_Sync_Bi_Di_Opportunity_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Script_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Object__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Timestamp__c</columns>
        <columns>Finish_Timestamp__c</columns>
        <columns>Records_Inserted__c</columns>
        <columns>Records_Updated__c</columns>
        <columns>Records_Checked__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>Script_Name__c</field>
            <operation>contains</operation>
            <value>Bi-Directional</value>
        </filters>
        <label>Sync Jobs - Bi-Di Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Sync_Jobs_Account</fullName>
        <columns>NAME</columns>
        <columns>Script_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Object__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Timestamp__c</columns>
        <columns>Finish_Timestamp__c</columns>
        <columns>Records_Inserted__c</columns>
        <columns>Records_Updated__c</columns>
        <columns>Records_Checked__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Sync Jobs - Account</label>
    </listViews>
    <listViews>
        <fullName>Sync_Jobs_Contact_All</fullName>
        <columns>NAME</columns>
        <columns>Script_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Object__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Timestamp__c</columns>
        <columns>Finish_Timestamp__c</columns>
        <columns>Records_Inserted__c</columns>
        <columns>Records_Updated__c</columns>
        <columns>Records_Checked__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Sync Jobs - Contact</label>
    </listViews>
    <listViews>
        <fullName>Sync_Jobs_Opportunity_Errors</fullName>
        <columns>NAME</columns>
        <columns>Script_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Object__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Timestamp__c</columns>
        <columns>Finish_Timestamp__c</columns>
        <columns>Records_Inserted__c</columns>
        <columns>Records_Updated__c</columns>
        <columns>Records_Checked__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>Script_Name__c</field>
            <operation>contains</operation>
            <value>Error</value>
        </filters>
        <label>Sync Jobs - Opportunity Errors</label>
    </listViews>
    <nameField>
        <displayFormat>SNID-{00000}</displayFormat>
        <label>Sync Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>